--- a/blocks/heading/__logo-link/heading__logo-link.css
+++ b/blocks/heading/__logo-link/heading__logo-link.css
@@ -7,3 +7,10 @@
     row-gap: 8px;
     column-gap: 15px;
 }
+
+@media screen and (max-width: 767px) {
+    .heading__logo-link {
+        column-gap: 11px;
+        row-gap: 5px;
+    }
+}
