--- a/blocks/heading/__search-form/heading__search-form.css
+++ b/blocks/heading/__search-form/heading__search-form.css
@@ -21,3 +21,9 @@
     background: white;
     color: #07051a;
 }
+
+@media screen and (max-width: 767px) {
+    .heading__search-form {
+        display: none;
+    }
+}
