--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -9,3 +9,20 @@
     line-height: 1.4;
     color: #DDDDE2;
 }
+
+@media screen and (max-width: 1023px) {
+    .header__subtitle {
+        max-width: 450px;
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .header__subtitle {
+        align-self: start;
+        max-width: 270px;
+        font-size: 12px;
+        line-height: 16px;
+        margin-bottom: 40px;
+    }
+}
