--- a/blocks/heading/__logo-title/heading__logo-title.css
+++ b/blocks/heading/__logo-title/heading__logo-title.css
@@ -11,3 +11,10 @@
     color: #DDDDE2;
     align-self: end;
 }
+
+@media screen and (max-width: 767px) {
+    .heading__logo-title {
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
