--- a/blocks/heading/__logo/heading__logo.css
+++ b/blocks/heading/__logo/heading__logo.css
@@ -1,3 +1,13 @@
 .heading__logo {
+    width: 80px;
+    height: 80px;
     grid-area: logo;
+}
+
+
+@media screen and (max-width: 767px) {
+    .heading__logo {
+        width: 40px;
+        height: 40px;
+    }
 }
