--- a/blocks/heading/heading.css
+++ b/blocks/heading/heading.css
@@ -1,8 +1,15 @@
 .heading {
     max-width: 1440px;
     margin: 0 auto;
-    padding: 10px 0 0;
+    padding: 10px 30px 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 767px) {
+    .heading {
+        padding: 16px 16px 0;
+    }
 }
