--- a/blocks/button-project-order/button-project-order.css
+++ b/blocks/button-project-order/button-project-order.css
@@ -11,6 +11,7 @@
     letter-spacing: 0.02em;
     color: #EEEFF1;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 1023px) {
