--- a/blocks/info/__read-more/info__read-more.css
+++ b/blocks/info/__read-more/info__read-more.css
@@ -10,6 +10,7 @@
     letter-spacing: 0.02em;
     color: #EEEFF1;
     background-color: #1E74EC;
+    cursor: pointer;
 }
 
 @media  screen and (max-width: 767px) {
