--- a/blocks/info/__vacations/info__vacations.css
+++ b/blocks/info/__vacations/info__vacations.css
@@ -11,6 +11,7 @@
     letter-spacing: 0.02em;
     color: #1E74EC;
     background-color: transparent;
+    cursor: pointer;
 }
 
 @media  screen and (max-width: 1279px) {
