--- a/blocks/info/_place/info_place_main.css
+++ b/blocks/info/_place/info_place_main.css
@@ -1,17 +1,15 @@
 .info_place_main {
-    margin: 180px auto;
+    margin: 180px auto 0 auto;
 }
 
 @media  screen and (max-width: 1439px) {
     .info_place_main {
         margin-top: 100px;
-        margin-bottom: 100px;
     }
 }
 
 @media  screen and (max-width: 1279px) {
     .info_place_main {
         margin-top: 0;
-        margin-bottom: 0;
     }
 }
