--- a/pages/index.css
+++ b/pages/index.css
@@ -39,3 +39,15 @@
 @import url(../blocks/info/__buttons/info__buttons.css);
 @import url(../blocks/info/__vacations/info__vacations.css);
 @import url(../blocks/info/__read-more/info__read-more.css);
+/* SUGGESTIONS */
+@import url(../blocks/suggestions/suggestions.css);
+@import url(../blocks/suggestions/_place/suggestions_place_main.css);
+@import url(../blocks/suggestions/__title/suggestions__title.css);
+@import url(../blocks/suggestions/__subtitle/suggestions__subtitle.css);
+@import url(../blocks/suggestions/__offer/suggestions__offer.css);
+@import url(../blocks/suggestions/__link/suggestions__link.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__subtitle/cards__subtitle.css);
