--- a/blocks/block-heading/__subtitle/block-heading__subtitle.css
+++ b/blocks/block-heading/__subtitle/block-heading__subtitle.css
@@ -1,4 +1,4 @@
-.block__heading-subtitle {
+.block-heading__subtitle {
     margin: 0;
     padding-bottom: 24px;
     font-family: 'Gotham';
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 767px) {
-    .block__heading-subtitle {
+    .block-heading__subtitle {
         font-size: 30px;
         line-height: 32px;
     }
