--- a/blocks/button-read-more/button-read-more.css
+++ b/blocks/button-read-more/button-read-more.css
@@ -1,4 +1,4 @@
-.info__read-more {
+.button-read-more {
     width: 206px;
     height: 48px;
     padding: 14px 20px;
@@ -14,7 +14,7 @@
 }
 
 @media  screen and (max-width: 767px) {
-    .info__read-more {
+    .button-read-more {
         background-color: transparent;
         color: #1E74EC;
         border: none;
