--- a/blocks/button-vacations/button-vacations.css
+++ b/blocks/button-vacations/button-vacations.css
@@ -1,4 +1,4 @@
-.info__vacations {
+.button-vacations {
     width: 206px;
     height: 48px;
     padding: 14px 20px;
@@ -15,7 +15,7 @@
 }
 
 @media  screen and (max-width: 1279px) {
-    .info__vacations {
+    .button-vacations {
         display: none;
     }
 }
