--- a/blocks/button-project-order/_place/button-project-order_place_portfolio.css
+++ b/blocks/button-project-order/_place/button-project-order_place_portfolio.css
@@ -1,3 +1,14 @@
 .button-project-order_place_portfolio {
     border-radius: 0;
 }
+
+@media screen and (max-width: 1023px) {
+    .button-project-order_place_portfolio {
+        width: 343px;
+        height: 32px;
+        padding: 8px 16px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 16px;
+    }
+}
