--- a/blocks/portfolio/__buttons/portfolio__buttons.css
+++ b/blocks/portfolio/__buttons/portfolio__buttons.css
@@ -4,3 +4,10 @@
     justify-content: space-between;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 1023px) {
+    .portfolio__buttons {
+        flex-direction: column;
+        align-items: center;
+    }
+}
