--- a/blocks/portfolio/__card-subtitle/portfolio__card-subtitle.css
+++ b/blocks/portfolio/__card-subtitle/portfolio__card-subtitle.css
@@ -1,4 +1,4 @@
-.portfilio__card-subtitle {
+.portfolio__card-subtitle {
     max-width: 100%;
     margin: 0;
     padding: 0;
@@ -8,4 +8,10 @@
     font-size: 18px;
     line-height: 1.22;
     color: #535670;
+}
+
+@media screen and (max-width: 1599px) {
+    .portfolio__card-subtitle {
+        text-align: center;
+    }
 }
