--- a/blocks/block-heading/_place/block-heading_place_portfolio.css
+++ b/blocks/block-heading/_place/block-heading_place_portfolio.css
@@ -1,4 +1,12 @@
 .block-heading_place_portfolio {
+    padding-top: 113px;
     margin: 0 auto;
     text-align: center;
+}
+
+@media  screen and (max-width: 767px) {
+    .block-heading_place_portfolio {
+        padding-top: 40px;
+        text-align: left;
+    }
 }
