--- a/blocks/portfolio/portfolio.css
+++ b/blocks/portfolio/portfolio.css
@@ -1,12 +1,22 @@
 .portfolio {
-    max-width: 1440px;
-    padding: 0 30px;
+    max-width: 1920px;
     font-family: 'Inter', 'Gotham', 'Gotham XNarrow', sans-serif;
+    position: relative;
 }
 
-@media screen and (max-width: 767px) {
-    .portfolio {
-        padding-right: 16px;
-        padding-left: 16px;
+.portfolio::after {
+    content: "";
+    width: 100%;
+    height: 640px;
+    background-color: #E6E8EF;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+@media  screen and (max-width: 767px) {
+    .portfolio::after {
+        height: 425px;
     }
 }
