--- a/blocks/footer/__container/footer__container.css
+++ b/blocks/footer/__container/footer__container.css
@@ -4,3 +4,11 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 1439px) {
+    .footer__container {
+        min-height: 340px;
+        flex-direction: column;
+        align-items: center;
+    }
+}
