--- a/blocks/footer/__info/footer__info.css
+++ b/blocks/footer/__info/footer__info.css
@@ -2,3 +2,12 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 1023px) {
+    .footer__info {
+        min-height: 52px;
+        margin-top: 24px;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+}
