--- a/blocks/footer/__menu-item/footer__menu-item.css
+++ b/blocks/footer/__menu-item/footer__menu-item.css
@@ -6,3 +6,9 @@
 .footer__menu-item:last-of-type {
     padding-bottom: 0;
 }
+
+@media screen and (max-width: 1023px) {
+    .footer__menu-item:last-of-type {
+        padding-bottom: 16px;
+    }
+}
