--- a/blocks/footer/__policy/footer__policy.css
+++ b/blocks/footer/__policy/footer__policy.css
@@ -18,3 +18,22 @@
 .footer__policy:last-of-type::after {
     display: none;
 }
+
+@media screen and (max-width: 1279px) {
+    .footer__policy:last-child {
+        display: none;
+    }
+
+    .footer__policy::after {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .footer__policy {
+        font-size: 11px;
+        line-height: 14px;
+        text-decoration-line: underline;
+        color: #A960AB;
+    }
+}
