--- a/blocks/footer/__wrapper/footer__wrapper.css
+++ b/blocks/footer/__wrapper/footer__wrapper.css
@@ -8,3 +8,23 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 1439px) {
+    .footer__wrapper {
+        max-width: 60%;
+        min-height: 486px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .footer__wrapper {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .footer__wrapper {
+        max-width: 100%;
+    }
+}
