--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,33 @@
 .header {
     width: 100%;
-    margin: 0;
+    margin: 0 0 180px;
     padding: 0;
     font-family: 'Inter', 'Gotham', 'Gotham XNarrow', sans-serif;
     background-image: url(../../images/earth.png);
     background-size: cover;
     background-position: center;
+}
+
+@media screen and (max-width: 1439px) {
+    .header {
+        margin-bottom: 100px;
+    }
+}
+
+@media screen and (max-width: 1279px) {
+    .header {
+        margin-bottom: 80px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .header {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .header {
+        margin-bottom: 0;
+    }
 }
