--- a/blocks/info/__subtitle/info__subtitle.css
+++ b/blocks/info/__subtitle/info__subtitle.css
@@ -1,25 +1,25 @@
 .info__subtitle {
+    max-width: 100%;
     margin: 0;
-    padding: 24px 0 40px;
+    padding: 50px 0 0;
     font-family: 'Gotham';
     font-style: normal;
-    font-weight: 325;
-    font-size: 18px;
-    line-height: 1.22;
-    color: #535670;
+    font-weight: 700;
+    font-size: 62px;
+    line-height: 68px;
+    color: #03115F;
 }
 
 @media screen and (max-width: 1279px) {
     .info__subtitle {
-        padding-top: 16px;
-        padding-bottom: 18px;
+        padding-top: 8px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .info__subtitle {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 20px;
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 32px;
     }
 }
