--- a/blocks/page-header/__content/page-header__content.css
+++ b/blocks/page-header/__content/page-header__content.css
@@ -1,29 +1,29 @@
-.team-header__content {
+.page-header__content {
     max-width: 577px;
     margin: 120px auto 0 240px;
 }
 
 @media screen and (max-width: 1439px) {
-    .team-header__content {
+    .page-header__content {
         margin-left: 150px;
     }
 }
 
 @media screen and (max-width: 1279px) {
-    .team-header__content {
+    .page-header__content {
         margin-left: 100px;
     }
 }
 
 @media screen and (max-width: 1023px) {
-    .team-header__content {
+    .page-header__content {
         margin-top: 100px;
         margin-left: 50px;
     }
 }
 
 @media screen and (max-width: 767px) {
-    .team-header__content {
+    .page-header__content {
         max-width: 550px;
         padding-right: 16px;
         margin: 80px auto 0;
