--- a/blocks/page-header/__title/page-header__title.css
+++ b/blocks/page-header/__title/page-header__title.css
@@ -1,4 +1,4 @@
-.team-header__title {
+.page-header__title {
     margin: 0;
     padding: 0 0 10px;
     font-family: 'Gotham';
@@ -9,14 +9,14 @@
 }
 
 @media screen and (max-width: 1279px) {
-    .team-header__title {
+    .page-header__title {
         font-size: 24px;
         line-height: 1.23;
     }
 }
 
 @media screen and (max-width: 767px) {
-    .team-header__title {
+    .page-header__title {
         font-size: 20px;
         line-height: 24px;
     }
