feat: add section supplemntary-services

--- a/blocks/services/__card-description-img-wrapper/services__card-description-img-wrapper.css
+++ b/blocks/services/__card-description-img-wrapper/services__card-description-img-wrapper.css
@@ -5,3 +5,11 @@
     display: flex;
     gap: 40px;
 }
+
+@media screen and (max-width: 767px) {
+    .services__card-description-img-wrapper {
+        padding-top: 16px;
+        padding-bottom: 26px;
+        gap: 24px;
+    }
+}
