--- a/blocks/services/__card-description-offer-text/services__card-description-offer-text.css
+++ b/blocks/services/__card-description-offer-text/services__card-description-offer-text.css
@@ -11,6 +11,7 @@
 
 @media screen and (max-width: 767px) {
     .services__card-description-offer-text {
+        padding-bottom: 0;
         max-width: 186px;
         font-size: 12px;
         line-height: 1.17;
