--- a/blocks/services/__card-title/services__card-title.css
+++ b/blocks/services/__card-title/services__card-title.css
@@ -14,6 +14,7 @@
 
 @media screen and (max-width: 767px) {
     .services__card-title {
+        padding-bottom: 8px;
         font-size: 18px;
         line-height: 1.22;
     }
