--- a/blocks/services/__cards/services__cards.css
+++ b/blocks/services/__cards/services__cards.css
@@ -1,5 +1,5 @@
 .services__cards {
-    padding: 110px 40px 180px 240px;
+    padding: 110px 40px 0 240px;
     box-sizing: border-box;
     width: 100%;
     display: grid;
@@ -26,7 +26,7 @@
 
 @media screen and (max-width: 1023px) {
     .services__cards {
-        padding: 40px 80px 100px;
+        padding: 40px 80px 0;
         gap: 60px;
     }
 }
