feat: add adaptive block discussion

--- a/blocks/contacts/__form-button-wrapper/contacts__form-button-wrapper.css
+++ b/blocks/contacts/__form-button-wrapper/contacts__form-button-wrapper.css
@@ -15,6 +15,6 @@
 
 @media screen and (max-width: 767px) {
     .contacts__form-button-wrapper {
-        width: 343px;
+        width: 100%;
     }
 }
