--- a/blocks/contacts/__form-input/contacts__form-input.css
+++ b/blocks/contacts/__form-input/contacts__form-input.css
@@ -8,6 +8,12 @@
     border: none;
     background: #FFF;
     border-radius: 4px;
+    font-family: 'Gotham';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    color: #75788D;
 }
 
 @media screen and (max-width: 1279px) {
@@ -18,7 +24,7 @@
 
 @media screen and (max-width: 767px) {
     .contacts__form-input {
-        min-width: 343px;
+        width: 100%;
         height: 30px;
         padding: 8px 16px;
         font-size: 12px;
