--- a/blocks/discussion/discussion.css
+++ b/blocks/discussion/discussion.css
@@ -1,4 +1,5 @@
 .discussion {
+    margin: 0 auto 180px auto;
     width: 100%;
     /* min-height: 785px;
     margin: 0 0 566px; */
@@ -10,14 +11,23 @@
     background-position: 0 0;
 }
 
+@media screen and (max-width: 1439px) {
+    .discussion {
+        margin-bottom: 100px;
+        min-height: 600px;
+    }
+}
+
 @media screen and (max-width: 1279px) {
     .discussion {
+        margin-bottom: 0;
         min-height: 600px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .discussion {
+        background-size: 100% 330px;
         min-height: 300px;
     }
 }
