--- a/blocks/heading/__burger-menu/heading__burger-menu.css
+++ b/blocks/heading/__burger-menu/heading__burger-menu.css
@@ -8,6 +8,7 @@
     background-color: transparent;
     border: none;
     outline: none;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 1279px) {
