--- a/blocks/project-form/__chapter/_type/project-form__chapter_type_submission.css
+++ b/blocks/project-form/__chapter/_type/project-form__chapter_type_submission.css
@@ -1,3 +1,11 @@
 .project-form__chapter_type_submission {
     flex-direction: row-reverse;
 }
+
+@media screen and (max-width: 1023px) {
+    .project-form__chapter_type_submission {
+        padding-bottom: 0;
+        justify-content: center;
+        border: none;
+    }
+}
