--- a/blocks/project-form/__description-subtitle/project-form__description-subtitle.css
+++ b/blocks/project-form/__description-subtitle/project-form__description-subtitle.css
@@ -9,3 +9,16 @@
     line-height: 1.38;
     color: #75788D;
 }
+
+@media screen and (max-width: 1023px) {
+    .project-form__description-subtitle {
+        padding-bottom: 16px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .project-form__description-subtitle {
+        font-size: 12px;
+        line-height: 1.33;
+    }
+}
