--- a/blocks/project-form/__description-title/project-form__description-title.css
+++ b/blocks/project-form/__description-title/project-form__description-title.css
@@ -9,3 +9,16 @@
     line-height: 1.45;
     color: #535670;
 }
+
+@media screen and (max-width: 1023px) {
+    .project-form__description-title {
+        padding-bottom: 16px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .project-form__description-title {
+        font-size: 18px;
+        line-height: 1.22;
+    }
+}
