--- a/blocks/project-form/__description/project-form__description.css
+++ b/blocks/project-form/__description/project-form__description.css
@@ -1,3 +1,16 @@
 .project-form__description {
-    
+    padding-right: 30px;
+}
+
+@media screen and (max-width: 1023px) {
+    .project-form__description {
+        padding-right: 0;
+        width: 453px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .project-form__description {
+        width: 100%;
+    }
 }
