--- a/blocks/project-form/__input/_type/project-form__input_type_textarea.css
+++ b/blocks/project-form/__input/_type/project-form__input_type_textarea.css
@@ -1,3 +1,9 @@
 .project-form__input_type_textarea {
     min-height: 96px;
 }
+
+@media screen and (max-width: 767px) {
+    .project-form__input_type_textarea {
+        min-height: 80px;
+    }
+}
