--- a/blocks/project-form/__input/project-form__input.css
+++ b/blocks/project-form/__input/project-form__input.css
@@ -8,4 +8,19 @@
     border-radius: 4px;
     box-sizing: border-box;
     align-items: center;
+    font-family: 'Gotham';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    color: #75788D;
+}
+
+@media screen and (max-width: 767px) {
+    .project-form__input {
+        width: 100%;
+        height: 30px;
+        font-size: 12px;
+        line-height: 1.17;
+    }
 }
