--- a/blocks/project-form/__inputs/project-form__inputs.css
+++ b/blocks/project-form/__inputs/project-form__inputs.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     gap: 16px;
 }
+
+@media screen and (max-width: 767px) {
+    .project-form__inputs {
+        width: 100%;
+    }
+}
