--- a/blocks/project-form/__privacy/project-form__privacy.css
+++ b/blocks/project-form/__privacy/project-form__privacy.css
@@ -7,3 +7,9 @@
     font-size: 11px;
     line-height: 1.82;
 }
+
+@media screen and (max-width: 767px) {
+    .project-form__privacy {
+        line-height: 1.27;
+    }
+}
