--- a/blocks/project-form/__submission-btn/project-form__submission-btn.css
+++ b/blocks/project-form/__submission-btn/project-form__submission-btn.css
@@ -10,4 +10,19 @@
     line-height: 19px;
     letter-spacing: 0.02em;
     color: #EEEFF1;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1023px) {
+    .project-form__submission-btn {
+        width: 100%;
+        border-radius: 8px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .project-form__submission-btn {
+        font-size: 14px;
+        line-height: 16px;
+    }
 }
