--- a/blocks/project-form/__submission/project-form__submission.css
+++ b/blocks/project-form/__submission/project-form__submission.css
@@ -1,3 +1,9 @@
 .project-form__submission {
     width: 453px;
 }
+
+@media screen and (max-width: 767px) {
+    .project-form__submission {
+        width: 100%;
+    }
+}
