--- a/blocks/project-form/project-form.css
+++ b/blocks/project-form/project-form.css
@@ -7,3 +7,16 @@
     background: #EEEFF1;
     display: flex;
 }
+
+@media screen and (max-width: 1279px) {
+    .project-form {
+        padding-left: 80px;
+        padding-right: 80px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .project-form {
+        padding: 0 16px 64px;
+    }
+}
