feat: add portfolio-page

--- a/blocks/button-connect/button-connect.css
+++ b/blocks/button-connect/button-connect.css
@@ -1,9 +1,9 @@
-.button-project-order {
+.button-connect {
     width: 206px;
     height: 48px;
     padding: 14px 20px;
-    background: #1E74EC;
-    border: none;
+    box-sizing: border-box;
+    border: 2px solid #1E74EC;
     font-family: 'Gotham';
     font-style: normal;
     font-weight: 500;
@@ -11,23 +11,21 @@
     line-height: 19px;
     letter-spacing: 0.02em;
     color: #EEEFF1;
+    background-color: #1E74EC;
     cursor: pointer;
 }
 
 @media screen and (max-width: 1023px) {
-    .button-project-order {
-        width: 150px;
-        font-size: 12px;
-        line-height: 1.2;
+    .button-connect {
+        width: 343px;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.02em;
     }
 }
 
 @media screen and (max-width: 767px) {
-    .button-project-order {
-        width: 343px;
-        padding: 16px 34px;
-        border-radius: 8px;
-        font-size: 14px;
-        line-height: 16px;
+    .button-connect {
+        align-self: center;
     }
 }
